crates/mdbook-rustdoc-links/tests/packages_empty_list/stderr/data.txt
ERROR mdbook-rustdoc-links: failed to read preprocessor config from book.toml

Caused by:
    TOML parse error at line 6, column 12
      |
    6 | packages = []
      |            ^^
    package list cannot be `[]`
    help: to run `cargo doc` without specifying any package, use `packages = "unspecified"`
    this will build docs for all packages and dependencies
    
ERROR mdbook_core::utils: The "rustdoc-links" preprocessor exited unsuccessfully with exit status: 1 status
